# qImageDisplayWidget

./: .gitmodules  CMakeLists.txt  imageadapter.cpp  imageadapter.h  imagewidget.cpp  imagewidget.h  imagewindow.cpp  imagewindow.h  imagewindow.ui  overlay.cpp  overlay.h
examples/: CMakeLists.txt
examples/simple_image_viewer/: CMakeLists.txt  main.cpp
resources/: icons.qrc
